------------------------------------------------------------------------------
  pracma                                                                NEWS
------------------------------------------------------------------------------

PLANNED IN NEXT VERSION

  NEW FUNCTIONS

    o Barycentric interpolation through barylag() and barylag2d().

CHANGES IN VERSION 0.3-2

  NEW FUNCTIONS

    o Sorting functions:

    o Functions from number theory: eulersPhi(), moebiusFun() and the 
      mertensFun(), sigma(), tau(), omega(), and Omega().

CHANGES IN VERSION 0.3-1

  NEW FUNCTIONS

    o Chebyshev polynomials of the first kind: chebPoly(), chebCoeff(),
      and chebApprox().

CHANGES IN VERSION 0.3-0

  OTHER CHANGES

    o New version of news.Rd, news.pdf.

    o More test functions for root finding and quadrature.

CHANGES IN VERSION 0.2-9

  NEW FUNCTIONS

    o fnorm() and the Runge function runge().

    o contfrac(), rat(), and rats() for continuous fractions.

    o meshgrid() and magic().

CHANGES IN VERSION 0.2-8

  NEW FUNCTIONS

    o quad() adaptive Simpson quadrature.

    o Minimum finding with fibsearch() and golden_ratio().

    o Root finding with newton(), secant(), and brentDekker().

CHANGES IN VERSION 0.2-7

  NEW FUNCTIONS

    o Regular expression functions regexp(), regexpi(), regexprep() and
      refindall().

CHANGES IN VERSION 0.2-6

  NEW FUNCTIONS

    o String functions blanks(), strtrim(), deblank(), strjust(),
      and strrep().

    o interp1() one-dimensional interpolation (incl. spline)

CHANGES IN VERSION 0.2-5

  NEW FUNCTIONS

    o Matlab functions mode(), clear() and beep().

CHANGES IN VERSION 0.2-4

  NEW FUNCTIONS

    o primroot() finds the smallest primitive root modulo a given n;
      needed functions are modpower() and modorder().

    o humps() and sinc(): Matlab test functions.

    o Root finding through bisection: bisect(), regulaFalsi().

    o outlierMAD(), findpeaks(), and piecewise().
